# Z

./: .gitignore  CMakeLists.txt
plugins/: anaglyph_3d.frag  analog_bleed.frag  bad_signal.frag  barrel_roll.frag  beat_flash.frag  bent.frag  bit_rotate.frag  block_smear.frag  bloom_glitch.frag  buffer_underrun.frag  chroma_420.frag  chromatic_aberration.frag  color_cycle.frag  cross_dissolve.frag  crt.frag  datamosh.frag  datamosh_transition.frag  digital_noise.frag  disco.frag  edge_glow.frag  feedback_trail.frag  feedback_xor.frag  fisheye.frag  frame_ghost.frag  glitch_blocks.frag  gpu_datamosh.frag  halftone.frag  hex_grid.frag  interlace.frag  jpeg_soup.frag  kaleidoscope.frag  macroblock.frag  melt_clock.frag  milkdrop.frag  mirror_flip.frag  noise_displace.frag  pixel_sort.frag  pixelation.frag  posterize.frag  pulse_zoom.frag  (+20 more)
src/: main.cpp
src/core/: appstate.cpp  appstate.h  keyframe.cpp  keyframe.h  project.cpp  project.h
src/engine/: audioengine.cpp  audioengine.h  cpueffects.cpp  cpueffects.h  glwidget.cpp  glwidget.h  pluginmanager.cpp  pluginmanager.h  shaders.cpp  shaders.h  videodecoder.cpp  videodecoder.h  videoengine.cpp  videoengine.h  videoframe.h
src/media/: mediaexporter.cpp  mediaexporter.h  mediaimporter.cpp  mediaimporter.h
src/ui/: inspector.h  mainwindow.cpp  mainwindow.h  timeline.h
src/ui/components/: effectsbrowser.cpp  effectsbrowser.h  inspector.cpp  mediapool.cpp  mediapool.h  timeline.cpp  trackcontrol.cpp  trackcontrol.h
src/utils/: logging.h
